--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio
+Binaries/
+Intermediate/
+Saved/
+
+# Derived Data Cache
+DerivedDataCache/
+
+# User specific files
+*.user
