--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ Config filter=lfs diff=lfs merge=lfs -text
 Content filter=lfs diff=lfs merge=lfs -text
 Source filter=lfs diff=lfs merge=lfs -text
 HW_09.uproject filter=lfs diff=lfs merge=lfs -text
+.vs filter=lfs diff=lfs merge=lfs -text
